# docsGPT

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  PLAN_upload_docs_mvp.md  PROGRESS.md  PROJECT_PLAN.md  ProjectInfo.md  README.md  config.yaml  pyproject.toml  requirements.txt  tasks.ps1
.github/workflows/: ci.yml
data/corpus/: manifest.json
data/gold/: forum_seeds.jsonl  forum_seeds_manifest.json  gold.jsonl
deploy/: deploy.ps1  keepalive.ps1
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  sse.ts  types.ts
results/: ablation_layer4a.md  ablation_summary.md  eval_decomposed_20260707T154745Z.json  eval_decomposed_20260707T155514Z.json  eval_dense_20260706T173356Z.json  eval_dense_20260711T193004Z.json  eval_hybrid_20260707T092021Z.json  eval_hybrid_20260711T193159Z.json  eval_rerank_20260707T110858Z.json  ragas_20260708T072417Z.json  ragas_20260711T193300Z.json  rerank_bakeoff_latest.json  sweep_rrf_20260707T093443Z.json
src/: __init__.py  config.py
src/agent/: __init__.py  ask.py  citations.py  decompose.py  graph.py  nodes.py  state.py  verify.py
src/api/: __init__.py  app.py  bench.py
src/eval/: __init__.py  build_gold.py  compile_gold.py  gold.py  metrics.py  synth.py  (+7 more)
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_chunker.py  test_citations.py  test_corpus.py  test_decompose.py  test_eval.py  test_forum.py  test_fusion.py  test_obs.py  test_path_to_url.py  test_rerank.py  test_retrieval.py  test_smoke.py  test_verify.py
(+19 files in other folders)
