[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docsgpt-agent"
version = "0.0.0"
description = "Deployed, agentic, cited RAG over fast-moving developer documentation."
requires-python = ">=3.11"
# Abstract runtime deps live here for packaging; EXACT pins live in requirements.txt
# (the reproducible lock, per CLAUDE.md §4). Heavy ML deps are added per-layer (D-015).
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
